<resources>
    <string name="app_name">Infinum Academy Shows</string>
    <string name="in_order_to_continue_please_log_in">In order to continue please log in.</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="shows">Shows</string>
    <string name="illustration">illustration</string>
    <string name="welcome">Welcome!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="stranger_things">Stranger Things</string>
    <string name="test_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="hide">Hide</string>
    <string name="your_shows_are_not_showing_get_it">Your shows are not showing? Get it?</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="write_a_review">Write a review</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="d_reviews_2f_average">%d REVIEWS, %.2f AVERAGE</string>
    <string name="show">Show</string>
    <string name="change_profile_photo">Change profile photo</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>
    <string name="profile_photo">Profile photo</string>
    <string name="close_icon">Close icon</string>
    <string name="logging_out">Logging out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_camera">Open Camera</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="permission_must_be_granted_to_use_the_camera_app">Permission must be granted to use the camera app</string>
    <string name="permission_must_be_granted_to_open_the_gallery">Permission must be granted to open the gallery</string>
    <string name="email_error">Email must be in correct format!</string>
    <string name="password_error">Password must be at least 6 characters long!</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="repeat_password_error">Passwords do not match!</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="email_is_already_taken">Email is already taken!</string>
    <string name="login_error">Invalid login credentials. Please try again.</string>
    <string name="registration_error">Registration was unsuccessful!</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="top_rated">Top Rated</string>
</resources>