<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="352dp"
    android:padding="16dp"
    android:orientation="vertical"
    app:cardCornerRadius="32dp"
    >

    <ImageView
        android:id="@+id/closeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/close_icon"
        android:contentDescription="@string/close_icon"/>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primary"
        app:cardCornerRadius="50dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="48dp">

            <ImageView
                android:id="@+id/profilePhoto"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:contentDescription="@string/profile_photo"
                tools:src="@drawable/squidward"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        tools:text="primer@primer.com"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeProfilePhotoButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/change_profile_photo"
        android:textColor="@color/primary"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="@color/white"
        app:cornerRadius="100dp"
        app:strokeColor="@color/primary"
        app:strokeWidth="2dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="@color/primary"
        app:cornerRadius="100dp"

        />

</LinearLayout>